# tsrakingpy

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
tests/: test_main.py
tsraking.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tsrakingpy/: __init__.py  main.py
