[project]
name = "tsraking"
dynamic = ["version"]
authors = [
  {name="Akil Huang", email="ahuang.bank@gmail.com"},
]
description = "This package implements the TSRAKING procedure developed by Statistics Canada in Python3."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/akil-h/tsrakingpy.git"

[build-system]
requires = ["setuptools>=61", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "release-branch-semver"
local_scheme = "no-local-version"


[tool.setuptools]
license-files = ["LICEN[CS]E*"]